refactor(adapter): ref some type adapter impl logic and fix some bug
ref some type adapter impl logic and fix some bug