@@ -1,33 +1,26 @@
 package com.i2bgod.kong.model.adapter;
 
 import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonSerializationContext;
 import com.google.gson.JsonSerializer;
-import com.google.gson.TypeAdapter;
 import com.google.gson.annotations.JsonAdapter;
 import com.google.gson.annotations.SerializedName;
-import com.google.gson.stream.JsonReader;
-import com.google.gson.stream.JsonWriter;
 import com.i2bgod.kong.model.admin.base.annotation.KongFK;
+import com.i2bgod.kong.util.PluginUtils;
 import lombok.extern.slf4j.Slf4j;
-import okio.Buffer;
 import org.apache.commons.collections.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.reflect.FieldUtils;
 
 import java.beans.IntrospectionException;
 import java.beans.PropertyDescriptor;
-import java.io.IOException;
-import java.io.InputStreamReader;
-import java.io.OutputStreamWriter;
-import java.io.Writer;
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.lang.reflect.Type;
-import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
@@ -42,14 +35,25 @@ import java.util.concurrent.ConcurrentHashMap;
 public class DblessJsonSerializer<T> implements JsonSerializer<T> {
     private Map<Class<?>, Object> jsonConverterMap = new ConcurrentHashMap<>(4);
 
+    private PluginUtils pluginUtils;
+
+    private static Gson defaultGson = new Gson();
+
+    public DblessJsonSerializer(PluginUtils pluginUtils) {
+        this.pluginUtils = pluginUtils;
+    }
+
     private Object getJsonConverter(Class<?> clz) {
         if (jsonConverterMap.containsKey(clz)) {
            return jsonConverterMap.get(clz);
         }
         return jsonConverterMap.computeIfAbsent(clz, newClz -> {
             try {
-                return newClz.newInstance();
-            } catch (InstantiationException | IllegalAccessException e) {
+                if (clz.isAssignableFrom(PluginJsonTypeAdapter.class)) {
+                  return new PluginJsonTypeAdapter<>(pluginUtils);
+                }
+                return newClz.getConstructor().newInstance();
+            } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
                 throw new RuntimeException(e);
             }
         });
@@ -72,7 +76,7 @@ public class DblessJsonSerializer<T> implements JsonSerializer<T> {
         try {
             propertyDescriptor = new PropertyDescriptor(fieldName, target.getClass());
             Method readMethod = propertyDescriptor.getReadMethod();
-            if (null == readMethod) {
+            if (null != readMethod) {
                return readMethod.invoke(target);
             } else {
                return FieldUtils.readField(target, fieldName, true);
@@ -90,46 +94,17 @@ public class DblessJsonSerializer<T> implements JsonSerializer<T> {
         List<Field> fkFields = FieldUtils.getFieldsListWithAnnotation(src.getClass(), KongFK.class);
         allFieldsList.removeAll(fkFields);
         allFieldsList.forEach(field -> {
-            try {
-                Object fieldObj = getFieldValue(src, field.getName());
-                if (!field.isAnnotationPresent(JsonAdapter.class)) {
-                    jsonObject.add(getSerializedName(field), context.serialize(fieldObj, field.getType()));
-                } else {
-                    Class<?> jsonAdaptorClz = field.getAnnotation(JsonAdapter.class).value();
-                    //typeAdapter
-                    if (TypeAdapter.class.isAssignableFrom(jsonAdaptorClz)) {
-                        // just for get render result of gson typeAdapter
-                        Buffer buffer = new Buffer();
-                        Writer writer = new OutputStreamWriter(buffer.outputStream(), StandardCharsets.UTF_8);
-                        Gson gson = new Gson();
-                        JsonWriter jsonWriter = gson.newJsonWriter(writer);
-                        TypeAdapter typeAdapter = (TypeAdapter) getJsonConverter(jsonAdaptorClz);
-                        typeAdapter.write(jsonWriter, fieldObj);
-                        jsonWriter.close();
-                        String bufStr = buffer.readUtf8();
-                        buffer.writeUtf8(bufStr);
-                        JsonReader jsonReader = gson.newJsonReader(new InputStreamReader(buffer.inputStream()));
-                        // simple check result is string/number
-                        if (bufStr.contains("\"")) {
-                            TypeAdapter<String> adapter = gson.getAdapter(String.class);
-                            String val = adapter.read(jsonReader);
-                            jsonObject.addProperty(getSerializedName(field), val);
-                        } else  {
-                            TypeAdapter<Number> adapter = gson.getAdapter(Number.class);
-                            Number val = adapter.read(jsonReader);
-                            jsonObject.addProperty(getSerializedName(field), val);
-                        }
-                    // jsonSerializer
-                    } else if (JsonSerializer.class.isAssignableFrom(jsonAdaptorClz)) {
-                        JsonSerializer serializer = (JsonSerializer) getJsonConverter(jsonAdaptorClz);
-                        jsonObject.add(getSerializedName(field), serializer.serialize(fieldObj, field.getType(), context));
-                    // other case
-                    } else {
-                        jsonObject.add(getSerializedName(field), context.serialize(fieldObj));
-                    }
-                }
-            } catch (IOException e) {
-                throw new RuntimeException(e);
+            Object fieldObj = getFieldValue(src, field.getName());
+            if (!field.isAnnotationPresent(JsonAdapter.class)) {
+                jsonObject.add(getSerializedName(field), context.serialize(fieldObj, field.getType()));
+            } else {
+                Class<?> jsonAdaptorClz = field.getAnnotation(JsonAdapter.class).value();
+                GsonBuilder gsonBuilder = new GsonBuilder();
+                Object jsonConverter = getJsonConverter(jsonAdaptorClz);
+                gsonBuilder.registerTypeAdapter(field.getType(), jsonConverter);
+                Gson gson = gsonBuilder.create();
+                JsonElement jsonElement = gson.toJsonTree(fieldObj);
+                jsonObject.add(getSerializedName(field), jsonElement);
             }
         });
 
@@ -144,14 +119,7 @@ public class DblessJsonSerializer<T> implements JsonSerializer<T> {
                 return;
             }
             Object o = getFieldValue(target, field.getAnnotation(KongFK.class).name());
-            if (o instanceof Number) {
-                jsonObject.addProperty(getSerializedName(field), ((Number) o));
-            } else if (o instanceof String) {
-                jsonObject.addProperty(getSerializedName(field), ((String) o));
-            } else {
-                log.warn("not support fk type for target:{}, on field:{}", target, field);
-                throw new RuntimeException("not support fk type");
-            }
+            jsonObject.add(getSerializedName(field), defaultGson.toJsonTree(o));
         });
         return jsonObject;
     }
